--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,11 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": ["es2018", "dom"]
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "@workout/constants": ["src/app/shared/constants"],
+      "@workout/constants/*": ["src/app/shared/constants/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
