--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/core": "3.5.1",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/splash-screen": "^1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
     "@ngx-translate/core": "^14.0.0",
