add error handling, use only icons eye without ion button

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -11,6 +11,12 @@
 			"androidScaleType": "CENTER_CROP",
 			"splashFullScreen": false,
 			"splashImmersive": false
+		},
+		"server": {
+			"url": "http://localhost:8100",
+			"allowNavigation": [
+				"*"
+			]
 		}
 	}
 }
